opa/library/constraints/pod-security-policy/required-security-context/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredSecurityContext
metadata:
  name: must-have-securitycontext
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - "kube-*"
      - "gatekeeper-system"        
    # namespaces:
    #   - "openshift-marketplace"
